# LumeSync-Student

./: .gitignore  CMakeLists.txt  README.md  electron-builder.json  package-lock.json  package.json
.github/workflows/: release.yml
docs/: native-student-runtime.md
electron/: main.js  preload.js
native/: build-installer.ps1  package-native.ps1
native/installer/: student-native.nsi
native/service/: CMakeLists.txt
native/service/src/: main.cpp
native/shared/: CMakeLists.txt
native/shared/include/lumesync/: shared.h
native/shared/src/: shared.cpp
native/shell/: CMakeLists.txt
native/shell/src/: main.cpp  resource.h  shell.rc
scripts/: start-native.js
shared/protocol/: student-host.ts
ui/student-host/: package.json  tsconfig.json
ui/student-host/scripts/: build.mjs
ui/student-host/src/: admin.ts  global.d.ts  offline.ts  types.d.ts
ui/student-host/static/: admin.html  offline.html
